# cpp-game-engine

./: .gitignore  Array.cpp  Array.hpp  CMakeLists.txt  Constants.hpp  EngineDefaults.cpp  EngineDefaults.hpp  Game.cpp  Game.hpp  README.md  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderSource.cpp  ShaderSource.hpp  blue.fshader  build.bat  cpp-game-engine.sln  cpp-game-engine.vcxproj  cpp-game-engine.vcxproj.filters  glad.c  main.cpp  mini-game-engine.sln  mini-game-engine.vcxproj
cpp-game-engine/x64/Debug/: cpp-game-engine.exe.recipe  cpp-game-engine.ilk  game.obj.enc  main.new.obj.enc  mini-game-engine.exe.recipe  vc143.idb
cpp-game-engine/x64/Debug/cpp-game-engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cpp-game-engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp-game-engine/x64/Debug/mini-game-engine.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
mini-game-engine/x64/Debug/: main.obj.enc  mini-game-engine.ilk  vc143.idb
mini-game-engine/x64/Debug/mini-game-engine.tlog/: CL.read.1.tlog  Cl.items.tlog  link.read.1.tlog  mini-game-engine.lastbuildstate
